# CSCE435Project

./: Report.md  parameters.txt
ProjectSort/CUDA_bucketSort/: bucketSortCUDA.cu
ProjectSort/CUDA_mergeSort/: bitonic.grace_job  mergeSortCUDA  mergeSortCUDA.cu  mergesort.cu  mergesort.grace_job
ProjectSort/CUDA_mergeSort/mergesortCUDA2/: CMakeLists.txt  mergesort.cu  mergesort.grace_job
ProjectSort/CUDA_oddEvenSort/: CMakeLists.txt  bitonic.grace_job  oddEvenSortCUDA.cu  oddeven.grace_job
ProjectSort/CUDA_oddEvenSort/cali/: CUDA-oddeven-t1024-v1048576-i2.cali  CUDA-oddeven-t1024-v16777216-i2.cali  CUDA-oddeven-t1024-v65536-i1.cali  CUDA-oddeven-t1024-v65536-i2.cali  CUDA-oddeven-t1024-v65536-i3.cali  (+23 more)
ProjectSort/CUDA_radixSort/: CMakeLists.txt  bitonic.grace_job  hello  radixSort  radixSort.cu
ProjectSort/MPI_BucketSort/: CMakeLists.txt  bucketSort.c  bucketsort.cpp  mpi.grace_job  p1024-a262144.cali  p1024-a65536.cali
ProjectSort/MPI_mergeSort/: mergeSort  mergesort.cpp  mpi.grace_job  mpi_mergeSort  mpi_mergeSort.c  output.9300624
ProjectSort/MPI_mergesort2/: mergesort.cpp  mpi.grace_job
ProjectSort/MPI_oddEvenSort/: CMakeLists.txt  mpi.grace_job  oddEvenSort.cpp  oddEvenSortMPI.cpp
ProjectSort/MPI_radixSort/: CMakeLists.txt  mpi.grace_job  output.9296086  output.9315694  radixSortMPI.c  radixSortMPI.cpp
ProjectSort/Sequential_radixSort/: CMakeLists.txt  radixSort.cpp  seq.grace_job
ProjectSort/Sequentual_mergeSort/: CMakeLists.txt  mergeSortSeq.cpp  seq.grace_job
ProjectSort/sequential_oddEvenSort/: mpi.grace_job  oddEvenSeq.cpp
(+25 files in other folders)
